<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Know where you are ...</string>
    <string name="action_settings">Settings</string>
    <string name="action_enableGPS">Enable GPS</string>
    <string name="action_disableGPS">Disable GPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_exit">Exit</string>
    <string name="action_read">Read File</string>
    <string name="action_start_route">Start Trace Route</string>
    <string name="action_stop_route">Stop Trace Route</string>
    <string name="action_weather">Weather</string>
    <string name="action_routegraph">Graph Routes</string>
    <string name="title_activity_file_explorer">FileExplorer</string>
    <string name="title_activity_file_browser">FileBrowser</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_route_graph">Route Graph</string>	
    <string name="action_setmaptype">Set map type</string>
	<color name="white">#DDDDDD</color>
	 
    <string name="action_show">Show</string>
    <string name="action_email">E-mail</string>
    <string name="action_delete">Delete</string>

</resources>
