<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--    <item
        android:id="@+id/action_enableGPS"
        android:visible="true"
        android:orderInCategory="8"
        android:title="@string/action_disableGPS"/>-->
<!--    <item
        android:id="@+id/action_read"
        android:visible="false"
        android:orderInCategory="7"
        android:title="@string/action_read"/>-->
    <item
        android:id="@+id/action_route"
        android:orderInCategory="1"
        android:title="@string/action_start_route"/>
    <item
        android:id="@+id/action_routegraph"
        android:orderInCategory="2"
        android:title="@string/action_routegraph"/>
    <item
        android:id="@+id/action_weather"
        android:orderInCategory="3"
        android:title="@string/action_weather"/>    
	<item
		android:id="@+id/action_setmaptype"
        android:orderInCategory="5"
        android:visible="false"
		android:title="@string/action_setmaptype"><menu xmlns:android="http://schemas.android.com/apk/res/android">
		<item android:id="@+id/action_MAP_TYPE_NORMAL" android:title="Normal" />
		<item android:id="@+id/action_MAP_TYPE_HYBRID" android:title="Hybrid" />
		<item android:id="@+id/action_MAP_TYPE_SATELLITE" android:title="Satellite" />
		<item android:id="@+id/action_MAP_TYPE_TERRAIN" android:title="Terrain" />
		<item android:id="@+id/action_MAP_TYPE_None" android:title="None" />
		</menu></item>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="6"
        android:title="@string/action_exit"/>
</menu>
